# vision_for_robotics

./: .gitignore  CMakeLists.txt
PnP/: CMakeLists.txt  estimate_pose.cpp
PnP/include/PnP/: PnP.h
PnP/src/: PnP.cpp
eight_point_algorithm/: CMakeLists.txt  run_eight_point_algo.cpp  test_eight_point_algo.cpp  triangulate_points.cpp
eight_point_algorithm/include/eight_point_algorithm/: eight_point_algorithm.h  linear_triangulator.h
eight_point_algorithm/src/: eight_point_algorithm.cpp  linear_triangulator.cpp
excercise_1/: CMakeLists.txt  main.cpp  show_cube.cpp  undistort_image.cpp
excercise_1/include/: data.h  utils.h
excercise_1/include/excercise_1/: camera_operations.h
excercise_1/src/: camera_operations.cpp  data.cpp  utils.cpp
pinhole_camera/: CMakeLists.txt  show_cube.cpp  undistort_image.cpp
pinhole_camera/include/pinhole_camera/: camera_operations.h
pinhole_camera/src/: camera_operations.cpp
simple_keypoint_tracker/: CMakeLists.txt  track_video.cpp
simple_keypoint_tracker/include/simple_keypoint_tracker/: tracker.h
simple_keypoint_tracker/src/: tracker.cpp
stereo_vision/: CMakeLists.txt  pointcloud_from_stereo.cpp
stereo_vision/include/stereo_vision/: stereo_matcher.h
stereo_vision/src/: stereo_matcher.cpp
utils/: CMakeLists.txt  test_visualizer.cpp
utils/include/utils/: conversion.h  data.h  visualizer.h
utils/src/: conversion.cpp  visualizer.cpp
vo_odometry/: CMakeLists.txt
vo_odometry/cfg/: kitty.yaml  parking.yaml
vo_odometry/include/vo_odometry/: camera.h  converter.h  frame.h  initializer.h  map.h  tracker.h  utils.h  vo_system.h
vo_odometry/src/: initializer.cpp  main.cpp  main_kitty.cpp  map.cpp  of_test.cpp  random_test.cpp  tracker.cpp  utils.cpp  vo_system.cpp
